# KTB_techTalk

./: CMakeLists.txt  Dockerfile  Makefile  README.md
k8s/: discord.yaml  kustomization.yaml
srcs/: main.cpp
